--- a/index.html
+++ b/index.html
@@ -1,60 +1,126 @@
 <!DOCTYPE html>
+<html lang="es">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Masajes Holísticos · Espacio Seguro</title>
+  <meta name="description" content="Masajes holísticos en espacio seguro para mujeres. Bienestar, contención y relajación consciente." />
+  <style>
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+      color: #3e4a47;
+      background-color: #f4f7f6;
+    }
+    header {
+      background: linear-gradient(135deg, #d7e5df, #f1f5f3);
+      padding: 100px 20px;
+      text-align: center;
+    }
+    header h1 {
+      font-size: 2.8rem;
+      margin-bottom: 15px;
+      font-weight: 300;
+      letter-spacing: 1px;
+    }
+    header p {
+      font-size: 1.2rem;
+      max-width: 650px;
+      margin: 0 auto 40px;
+      line-height: 1.6;
+    }
+    .btn {
+      display: inline-block;
+      padding: 14px 34px;
+      background-color: #8fb3a9;
+      color: white;
+      text-decoration: none;
+      border-radius: 40px;
+      font-weight: 500;
+      letter-spacing: 0.5px;
+    }
+    section {
+      padding: 80px 20px;
+      max-width: 1000px;
+      margin: auto;
+    }
+    h2 {
+      text-align: center;
+      margin-bottom: 50px;
+      font-size: 2.2rem;
+      font-weight: 300;
+    }
+    .services {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+      gap: 30px;
+    }
+    .card {
+      background: white;
+      padding: 40px 30px;
+      border-radius: 24px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.06);
+    }
+    .about, .ritual {
+      background: white;
+      border-radius: 24px;
+      padding: 50px;
+      box-shadow: 0 12px 30px rgba(0,0,0,0.05);
+      text-align: center;
+      line-height: 1.8;
+    }
+    footer {
+      background-color: #e1e8e5;
+      text-align: center;
+      padding: 25px;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Masajes Holísticos · Espacio Seguro</h1>
+  <p>Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.</p>
+  <a href="#contacto" class="btn">Reservar sesión</a>
 </header>
 
+<section>
+  <h2>Sesiones para mujeres</h2>
+  <div class="services">
+    <div class="card">
+      <h3>Masaje Holístico Integral</h3>
+      <p>Una experiencia profunda que invita a soltar tensiones físicas, emocionales y energéticas.</p>
+    </div>
+    <div class="card">
+      <h3>Masaje Relajante Consciente</h3>
+      <p>Movimientos lentos y envolventes que inducen a un estado meditativo de relajación.</p>
+    </div>
+    <div class="card">
+      <h3>Masaje Descontracturante Suave o Intenso</h3>
+      <p>Trabajo profundo y respetuoso que libera bloqueos musculares.</p>
+    </div>
+  </div>
+</section>
 
 <section>
-<h2>Sesiones para mujeres</h2>
-<div class="services">
-<div class="card">
-<h3>Masaje Holístico Integral</h3>
-<p>Una experiencia profunda que invita a soltar tensiones físicas, emocionales y energéticas, restaurando el equilibrio natural del cuerpo.</p>
-</div>
-<div class="card">
-<h3>Masaje Relajante Consciente</h3>
-<p>Movimientos lentos y envolventes que inducen a un estado meditativo de relajación y presencia.</p>
-</div>
-<div class="card">
-<h3>Masaje Descontracturante Suave o intenso</h3>
-<p>Trabajo profundo pero respetuoso que libera bloqueos musculares sin perder la armonía del tratamiento.</p>
-</div>
-</div>
+  <h2>Mi enfoque</h2>
+  <div class="about">
+    <p>Trabajo desde el respeto absoluto, el consentimiento y la escucha atenta. Cada encuentro es un espacio seguro.</p>
+  </div>
 </section>
-
 
 <section>
-<h2>Mi enfoque</h2>
-<div class="about">
-<p>Trabajo desde el respeto absoluto, el consentimiento y la escucha atenta. Cada encuentro se construye como un espacio seguro donde podés relajarte sin exigencias, a tu ritmo, con límites claros y presencia amorosa.</p>
-<p>El cuidado emocional es tan importante como el físico. Por eso priorizo la confianza, la privacidad y una comunicación clara durante toda la sesión.</p>
-</div>
+  <h2>El encuentro</h2>
+  <div class="ritual">
+    <p>La sesión comienza con una charla, continúa con el masaje y finaliza con un momento de integración.</p>
+  </div>
 </section>
-
-
-<section>
-<h2>El encuentro </h2>
-<div class="ritual">
-<p>Cada sesión comienza con una charla breve para acordar necesidades, límites y preferencias. El masaje se realiza con presencia y respeto, y finaliza con un momento de integración para que vuelvas a tu día en calma y centrada.</p>
-<p>Todo sucede en un entorno íntimo, cálido y protegido, pensado para que te sientas contenida y segura en todo momento.</p>
-</div>
-</section>
-
-
-<section id="contacto">
-<p style="text-align:center; font-style:italic; max-width:700px; margin:0 auto 30px;">Este es un espacio de bienestar y cuidado exclusivo para mujeres, basado en el respeto, el consentimiento y la confidencialidad.</p>
-<h2>Contacto</h2>
-<div class="contact">
-<p>Consultas y reservas · Atención exclusiva para mujeres</p>
-<p><strong>WhatsApp:</strong> +54 9 2233492569 </p>
-<p><strong>Ubicación:</strong> A coordinar</p>
-<a href="https://wa.me/5492233492569" class="btn">Escribime por WhatsApp</a>
-</div>
-</section>
-
 
 <footer>
-<p>© 2026 Masajes Holísticos · Bienestar y Conciencia</p>
+  <p>© 2026 · Espacio Seguro para Mujeres</p>
 </footer>
-
 
 </body>
 </html>
+
