--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
     }
     header p {
       font-size: 1.2rem;
-      max-width: 650px;
+      max-width: 700px;
       margin: 0 auto 40px;
-      line-height: 1.6;
+      line-height: 1.7;
     }
     .btn {
       display: inline-block;
@@ -61,66 +61,13 @@
       border-radius: 24px;
       box-shadow: 0 12px 30px rgba(0,0,0,0.06);
     }
+    .card p {
+      line-height: 1.7;
+    }
     .about, .ritual {
       background: white;
       border-radius: 24px;
       padding: 50px;
-      box-shadow: 0 12px 30px rgba(0,0,0,0.05);
-      text-align: center;
-      line-height: 1.8;
-    }
-    footer {
-      background-color: #e1e8e5;
-      text-align: center;
-      padding: 25px;
-      font-size: 0.9rem;
-    }
-  </style>
-</head>
-<body>
+      box-shadow
 
-<header>
-  <h1>Masajes Holísticos · Espacio Seguro</h1>
-  <p>Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.</p>
-  <a href="#contacto" class="btn">Reservar sesión</a>
-</header>
-
-<section>
-  <h2>Sesiones para mujeres</h2>
-  <div class="services">
-    <div class="card">
-      <h3>Masaje Holístico Integral</h3>
-      <p>Una experiencia profunda que invita a soltar tensiones físicas, emocionales y energéticas.</p>
-    </div>
-    <div class="card">
-      <h3>Masaje Relajante Consciente</h3>
-      <p>Movimientos lentos y envolventes que inducen a un estado meditativo de relajación.</p>
-    </div>
-    <div class="card">
-      <h3>Masaje Descontracturante Suave o Intenso</h3>
-      <p>Trabajo profundo y respetuoso que libera bloqueos musculares.</p>
-    </div>
-  </div>
-</section>
-
-<section>
-  <h2>Mi enfoque</h2>
-  <div class="about">
-    <p>Trabajo desde el respeto absoluto, el consentimiento y la escucha atenta. Cada encuentro es un espacio seguro.</p>
-  </div>
-</section>
-
-<section>
-  <h2>El encuentro</h2>
-  <div class="ritual">
-    <p>La sesión comienza con una charla, continúa con el masaje y finaliza con un momento de integración.</p>
-  </div>
-</section>
-
-<footer>
-  <p>© 2026 · Espacio Seguro para Mujeres</p>
-</footer>
-
-</body>
-</html>
 
