--- a/index.html
+++ b/index.html
@@ -68,6 +68,100 @@
       background: white;
       border-radius: 24px;
       padding: 50px;
-      box-shadow
+      box-shadow: 0 12px 30px rgba(0,0,0,0.05);
+      text-align: center;
+      line-height: 1.8;
+    }
+    footer {
+      background-color: #e1e8e5;
+      text-align: center;
+      padding: 25px;
+      font-size: 0.9rem;
+    }
+  </style>
+</head>
+<body>
+
+<header>
+  <h1>Masajes Holísticos · Espacio Seguro</h1>
+  <p>
+    Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.  
+    Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
+  </p>
+  <a href="#contacto" class="btn">Reservar sesión</a>
+</header>
+
+<section>
+  <h2>Sesiones para mujeres</h2>
+  <div class="services">
+
+    <div class="card">
+      <h3>Masaje Holístico Integral</h3>
+      <p>
+        Una experiencia profunda que invita a soltar tensiones físicas, emocionales y energéticas,
+        restaurando el equilibrio natural del cuerpo.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Masaje Relajante Consciente</h3>
+      <p>
+        Movimientos lentos y envolventes que inducen a un estado meditativo de relajación y presencia.
+      </p>
+    </div>
+
+    <div class="card">
+      <h3>Masaje Descontracturante Suave o Intenso</h3>
+      <p>
+        Trabajo profundo pero respetuoso que libera bloqueos musculares
+        sin perder la armonía del tratamiento.
+      </p>
+    </div>
+
+  </div>
+</section>
+
+<section>
+  <h2>Mi enfoque</h2>
+  <div class="about">
+    <p>
+      Trabajo desde el respeto absoluto, el consentimiento y la escucha atenta.
+      Cada encuentro se construye como un espacio seguro donde podés relajarte
+      sin exigencias, a tu ritmo, con límites claros y presencia amorosa.
+    </p>
+    <p>
+      El cuidado emocional es tan importante como el físico.
+      Por eso priorizo la confianza, la privacidad y una comunicación clara
+      durante toda la sesión.
+    </p>
+  </div>
+</section>
+
+<section>
+  <h2>El encuentro</h2>
+  <div class="ritual">
+    <p>
+      Cada sesión comienza con una charla breve para acordar necesidades,
+      límites y preferencias. El masaje se realiza con presencia y respeto,
+      y finaliza con un momento de integración para que vuelvas a tu día
+      en calma y centrada.
+    </p>
+  </div>
+</section>
+
+<section id="contacto">
+  <h2>Contacto</h2>
+  <div class="about">
+    <p><strong>Atención exclusiva para mujeres</strong></p>
+    <p>Consultas y reservas por WhatsApp</p>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 · Espacio Seguro · Masajes Holísticos para Mujeres</p>
+</footer>
+
+</body>
+</html>
 
 
