--- a/index.html
+++ b/index.html
@@ -152,8 +152,23 @@
 <section id="contacto">
   <h2>Contacto</h2>
   <div class="about">
-    <p><strong>Atención exclusiva para mujeres</strong></p>
-    <p>Consultas y reservas por WhatsApp</p>
+    <p><strong>Espacio seguro · Atención exclusiva para mujeres</strong></p>
+
+    <p>
+      Si sentís el llamado, podés escribirme para consultas o para reservar tu sesión.
+      Te respondo con calma y respeto.
+    </p>
+
+    <p>
+      📲 <strong>WhatsApp:</strong><br>
+      <a href="https://wa.me/5492233492569" class="btn">
+        Escribirme por WhatsApp
+      </a>
+    </p>
+
+    <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 20px;">
+      La comunicación es confidencial y cuidada desde el primer contacto.
+    </p>
   </div>
 </section>
 
