--- a/index.html
+++ b/index.html
@@ -149,14 +149,41 @@
   </div>
 </section>
 
-<section id="contacto">
+<section id="<section id="contacto">
+  <h2>Contacto</h2>
+  <div class="about">
+    <p><strong>Espacio seguro · Atención exclusiva para mujeres</strong></p>
+
+    <p>
+      Las sesiones se realizan <strong>únicamente con reserva previa</strong>,
+      para poder brindar un acompañamiento cuidado, personalizado y respetuoso.
+    </p>
+
+    <p>
+      Si sentís el llamado, podés escribirme por WhatsApp para consultar
+      disponibilidad y coordinar tu sesión.
+    </p>
+
+    <p>
+      📲 <strong>Reservas por WhatsApp:</strong><br>
+      <a href="https://wa.me/5491100000000" class="btn">
+        Solicitar reserva
+      </a>
+    </p>
+
+    <p style="font-size: 0.9rem; opacity: 0.8; margin-top: 20px;">
+      La comunicación es confidencial y cuidada desde el primer contacto.
+    </p>
+  </div>
+</section>
+">
   <h2>Contacto</h2>
   <div class="about">
     <p><strong>Espacio seguro · Atención exclusiva para mujeres</strong></p>
 
     <p>
       Si sentís el llamado, podés escribirme para consultas o para reservar tu sesión.
-      Te respondo con calma y respeto.
+      
     </p>
 
     <p>
