--- a/index.html
+++ b/index.html
@@ -149,7 +149,16 @@
   </div>
 </section>
 
-<section id="<section id="contacto">
+<section id="<section id="<div class="ubicacion">
+  <p><strong>Ubicación</strong></p>
+  <p>
+    Consultorio privado en <strong>Barrio / Zona</strong>, <strong>Ciudad</strong>.
+  </p>
+  <p style="font-size: 0.9rem; opacity: 0.8;">
+    La dirección exacta se comparte una vez confirmada la reserva.
+  </p>
+</div>
+">
   <h2>Contacto</h2>
   <div class="about">
     <p><strong>Espacio seguro · Atención exclusiva para mujeres</strong></p>
