--- a/index.html
+++ b/index.html
@@ -152,12 +152,12 @@
 <section id="<section id="<div class="ubicacion">
   <p><strong>Ubicación</strong></p>
   <p>
-    Consultorio privado en <strong>Mar del Plata / Zona Los Pinares</strong>, <strong>
+    Consultorio privado en <strong>Mar del Plata / Barrio Los Pinares</strong>, <strong>
   <p style="font-size: 0.9rem; opacity: 0.8;">
     La dirección exacta se comparte una vez confirmada la reserva.
   </p>
 </div>
-">
+
   <h2>Contacto</h2>
   <div class="about">
     <p><strong>Espacio seguro · Atención exclusiva para mujeres</strong></p>
