--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 <section id="<section id="<div class="ubicacion">
   <p><strong>Ubicación</strong></p>
   <p>
-    Consultorio privado en <strong>Mar del Plata / Barrio Los Pinares</strong>, <strong>
+    Consultorio privado en <strong>Mar del Plata / Barrio Los Pinares</strong> <strong>
   <p style="font-size: 0.9rem; opacity: 0.8;">
     La dirección exacta se comparte una vez confirmada la reserva.
   </p>
