--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Masajes Holísticos · Espacio Seguro</title>
+  <title> Aledelic Masajes 
   <meta name="description" content="Masajes holísticos en espacio seguro para mujeres. Bienestar, contención y relajación consciente." />
   <style>
     body {
