--- a/index.html
+++ b/index.html
@@ -149,20 +149,34 @@
   </div>
 </section>
 
-<section id="contacto">
+<section id="<section id="<div class="ubicacion">
+  <p><strong>Ubicación</strong></p>
+  <p>
+    Consultorio privado en <strong>Barrio / Zona</strong>, <strong>Ciudad</strong>.
+  </p>
+  <p style="font-size: 0.9rem; opacity: 0.8;">
+    La dirección exacta se comparte una vez confirmada la reserva.
+  </p>
+</div>
+">
   <h2>Contacto</h2>
   <div class="about">
     <p><strong>Espacio seguro · Atención exclusiva para mujeres</strong></p>
 
     <p>
-      Si sentís el llamado, podés escribirme para consultas o para reservar tu sesión.
-      Te respondo con calma y respeto.
+      Las sesiones se realizan <strong>únicamente con reserva previa</strong>,
+      para poder brindar un acompañamiento cuidado, personalizado y respetuoso.
     </p>
 
     <p>
-      📲 <strong>WhatsApp:</strong><br>
-      <a href="https://wa.me/5492233492569" class="btn">
-        Escribirme por WhatsApp
+      Si sentís el llamado, podés escribirme por WhatsApp para consultar
+      disponibilidad y coordinar tu sesión.
+    </p>
+
+    <p>
+      📲 <strong>Reservas por WhatsApp:</strong><br>
+      <a href="https://wa.me/5491100000000" class="btn">
+        Solicitar reserva
       </a>
     </p>
 
@@ -171,7 +185,6 @@
     </p>
   </div>
 </section>
-
 <footer>
   <p>© 2026 · Espacio Seguro · Masajes Holísticos para Mujeres</p>
 </footer>
