--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
 <section id="<section id="<div class="ubicacion">
   <p><strong>Ubicación</strong></p>
   <p>
-    Consultorio privado en <strong>Barrio / Zona</strong>, <strong>Ciudad</strong>.
-  </p>
+    Consultorio privado en <strong>Barrio Los Pinares / Mar del Plata</strong>
+
   <p style="font-size: 0.9rem; opacity: 0.8;">
     La dirección exacta se comparte una vez confirmada la reserva.
   </p>
