--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title> Aledelic masajes </title>
   <meta name="description" content="Masajes holísticos en espacio seguro para mujeres. Bienestar, contención y relajación consciente." />
-  <style>
+  <style> 
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #3e4a47;
-      background-color: #f4f7f6;
+      background-color: beige;
     }
     header {
       background: linear-gradient(135deg, #d7e5df, #f1f5f3);
