--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       color: #3e4a47;
-      background-color: beige;
+      background-color: #ede7df;
     }
     header {
       background: linear-gradient(135deg, #d7e5df, #f1f5f3);
