--- a/index.html
+++ b/index.html
@@ -83,9 +83,7 @@
 <body>
 
 <header>
-  <h1>Aledelic Masajes:
-
-🌿 </h1>
+  <h1>Aledelic Masajes🌿 </h1>
   <p>
     Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.  
     Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
