--- a/index.html
+++ b/index.html
@@ -88,7 +88,15 @@
     Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.  
     Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
   </p>
-  <a href="#contacto" class="btn">Reservar sesión</a>
+  <a href="#contacto" class="btn"><a
+  href="https://wa.me/549XXXXXXXXXX"
+  class="btn"
+  target="_blank"
+  rel="noopener"
+>
+  Reservar sesión
+</a>
+</a>
 </header>
 
 <section>
