--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
   </p>
   <a href="#contacto" class="btn"><a
-  href="https://wa.me/549XXXXXXXXXX"
+  href="https://wa.me/5492233492569"
   class="btn"
   target="_blank"
   rel="noopener"
