--- a/index.html
+++ b/index.html
@@ -87,16 +87,8 @@
   <p>
     Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.  
     Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
- 
-  <a href="#contacto" class="btn"><a
-  href="https://wa.me/5492233492569"
-  class="btn"
-  target="_blank"
-  rel="noopener"
->
-  Reservar sesión
-</a>
-</a>
+  </p>
+  <a href="#contacto" class="btn">Reservar sesión</a>
 </header>
 
 <section>
@@ -199,5 +191,6 @@
 
 </body>
 </html>
+
 
    
