--- a/index.html
+++ b/index.html
@@ -88,8 +88,7 @@
     Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.  
     Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
   </p>
-  <a href="#contacto" class="btn"><a
-  href="https://wa.me/5492233492569"
+  <a href="#contacto" class="btn">="https://wa.me/5492233492569"
   class="btn"
   target="_blank"
   rel="noopener"
