--- a/index.html
+++ b/index.html
@@ -88,7 +88,8 @@
     Un espacio seguro, íntimo y de contención creado exclusivamente para mujeres.  
     Acompañamiento consciente para descansar, soltar y habitar el cuerpo con calma y confianza.
   </p>
-  <a href="#contacto" class="btn">="https://wa.me/5492233492569"
+  <a href="#contacto" class="btn"><a
+  href="https://wa.me/549XXXXXXXXXX"
   class="btn"
   target="_blank"
   rel="noopener"
@@ -182,8 +183,8 @@
 
     <p>
       📲 <strong>Reservas por WhatsApp:</strong><br>
-      <a href="https://wa.me/5491100000000" class="btn">
-        Solicitar reserva
+      <a href="https://wa.me/5492233492569" class="btn">
+       Reserva tu turno!
       </a>
     </p>
 
