--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <div class="services">
 
     <div class="card">
-      <h3>Masaje Holístico Integral</h3>
+      <h3>Masaje Integral (sedativos y descontracturantes)</h3>
       <p>
         Una experiencia profunda que invita a soltar tensiones físicas, emocionales y energéticas,
         restaurando el equilibrio natural del cuerpo.
@@ -107,7 +107,7 @@
     </div>
 
     <div class="card">
-      <h3>Masaje Relajante Consciente</h3>
+      <h3>Masaje Relajante </h3>
       <p>
         Movimientos lentos y envolventes que inducen a un estado meditativo de relajación y presencia.
       </p>
