--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
     </div>
 
     <div class="card">
-      <h3>Masaje Descontracturante Suave o Intenso</h3>
+      <h3>Masaje Descontracturante </h3>
       <p>
         Trabajo profundo pero respetuoso que libera bloqueos musculares
         sin perder la armonía del tratamiento.
