--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       display: inline-block;
       padding: 14px 34px;
       background-color: #8fb3a9;
-      color: white;
+      color: green;
       text-decoration: none;
       border-radius: 40px;
       font-weight: 500;
