--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     body {
       margin: 0;
       font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #3e4a47;
+      color: #f2f6f4;
       background-color: #ffffff;
     }
     header {
